--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,8 @@
 *.x86_64
 *.hex
 
-# Debug files
+# Debug files and folder
+/Tetris_STM_code/Debug/
 *.dSYM/
 *.su
 *.idb
@@ -50,3 +51,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+up0T<K6fkN5-
