--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#settings
+.settings/
+
+#metadata
+.metadata/
+
 # Prerequisites
 *.d
 
@@ -52,18 +58,3 @@ Module.symvers
 Mkfile.old
 dkms.conf
 up0T<K6fkN5-
-
-# user gitignore
-*.pydevproject
-.project
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.classpath
-.settings/
-.loadpath
